cleanup token content

--- a/src/tokens/display_addresses.html
+++ b/src/tokens/display_addresses.html
@@ -1,5 +1,12 @@
-<span class="footer-address"
-  >Sure-Dry, LLC<br />754 W. Airport Road<br />Menasha, WI 54952</span
-><br /><br /><span class="footer-address"
-  >Sure-Dry, LLC<br />4205 Stewart Ave<br />Wausau, WI 54401</span
->
+<span class="footer-address">
+  Sure-Dry, LLC<br />
+  754 W. Airport Road<br />
+  Menasha, WI 54952
+</span>
+<br />
+<br />
+<span class="footer-address">
+  Sure-Dry, LLC<br />
+  4205 Stewart Ave<br />
+  Wausau, WI 54401
+</span>
