--- a/src/globals/page_base.html
+++ b/src/globals/page_base.html
@@ -12,8 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../globals/index.css" />
-    <link rel="stylesheet" href="../globals/theme.scss" />
+    <link rel="stylesheet" href="../globals/index.scss" />
 
     <slot name="top-inject"></slot>
   </head>
