--- a/src/pages/buck.html
+++ b/src/pages/buck.html
@@ -14,7 +14,9 @@
 
   <fill name="footer">
     <!-- Place footer here -->
-    <use-section src="./footer/variant_001/index.html"></use-section>
+    <use-section src="./footer/variant_001/index.html">
+      <fill name="info-hours"></fill>
+    </use-section>
   </fill>
 
   <fill name="bottom-inject">
